err/alexafsm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alexafsm'...
Compiling './lib/python3.5/site-packages/alexafsm/policy.py'...
***   File "./lib/python3.5/site-packages/alexafsm/policy.py", line 67
    logger.info(f"Changed from {previous_state} to {current_state} through {intent}")
                                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alexafsm/response.py'...
***   File "./lib/python3.5/site-packages/alexafsm/response.py", line 67
    speech=f"Thank you for using {skill_name}",
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alexafsm/states.py'...
***   File "./lib/python3.5/site-packages/alexafsm/states.py", line 20
    assert 'source' not in transition, f"Expected no source to be specified:" \
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alexafsm/test_helpers.py'...
***   File "./lib/python3.5/site-packages/alexafsm/test_helpers.py", line 22
    full_args = f"{args_as_str}{kwargs_as_str}"
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alexafsm/utils.py'...
***   File "./lib/python3.5/site-packages/alexafsm/utils.py", line 25
    assert tran.source in states, f"Invalid source state: {tran.source}!!"
                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alexafsm-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/transitions'...
Listing './lib/python3.5/site-packages/transitions/extensions'...
Listing './lib/python3.5/site-packages/transitions-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/voicelabs'...
Listing './lib/python3.5/site-packages/voicelabs-0.0.10.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
